--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "build": "webpack --mode=production",
     "watch": "webpack-dev-server --mode=development",
+    "lint": "eslint --ext .js src",
+    "lint": "eslint --ext .js --fix src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,12 +33,19 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "eslint": "^5.15.3",
+    "eslint-config-squarespace": "^1.0.1",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-loader": "^2.1.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
@@ -49,5 +58,16 @@
     "@babel/polyfill": "^7.4.0",
     "normalize.css": "^8.0.1",
     "youtube-player": "^5.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint --fix --max-warnings 0",
+      "git add"
+    ]
   }
 }
