--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "classlist-polyfill": "^1.2.0",
     "core-js": "^2.6.5",
     "normalize.css": "^8.0.1",
     "youtube-player": "^5.5.2"
